--- a/src/app/gallery/gallery-view/gallery-view.component.html
+++ b/src/app/gallery/gallery-view/gallery-view.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="!(list|async).length; else galleryListTpl;">
   <div class="alert alert-light" role="alert">
-    Gallery list empty
+    Gallery subject list empty
   </div>
 </ng-container>
 
