--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="card login-card">
   <form class="card-body" [formGroup]="form" (submit)="formSubmitHandler($event)">
-    <h4 class="card-title text-center"> Kairos UI</h4>
+    <h3 class="card-title text-center"> Kairos UI</h3>
 
     <adm-input-container class="form-group" label="APP ID" [control]="form.get('app_id')">
-      <input type="text" adm formControlName="app_id">
+      <input type="text" placeholder="Kairos application id" adm formControlName="app_id">
     </adm-input-container>
 
     <adm-input-container class="form-group" label="APP KEY" [control]="form.get('app_key')">
-      <input type="text" adm formControlName="app_key">
+      <input type="text" placeholder="Kairos application key" adm formControlName="app_key">
     </adm-input-container>
 
 
